--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    padding: 0;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   /* Showcase Section Styles */
   .showcase {
